--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
         </div>
       </section>
     </main>
-    <div class="attribution">
+    <footer class="attribution">
         Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
         Coded by <a href="#">Okputu-e</a>.
-    </div>
+    </footer>
   </div> 
 </body>
 </html>
